Remove Class1 files and organize project structure
The commit eliminates redundant Class1.cs files from Statistic.Application, Statistic.Domain, and Statistic.Infrastructure. Moreover, it establishes a clearer structure for the Statistic.Application, Statistic.Domain, Statistic.Infrastructure, and Statistic.Wpf projects by adding meaningful folders such as Services, Entities, Repositories, Converters, etc. This restructuring aims to increase code organization and accessibility.

--- a/src/Statistic.Wpf/Statistic.Wpf.csproj
+++ b/src/Statistic.Wpf/Statistic.Wpf.csproj
@@ -15,4 +15,18 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Converters\" />
+      <Folder Include="Services\" />
+      <Folder Include="ViewModel\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Page Update="View\MainWindow.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+    </ItemGroup>
+
 </Project>
