--- a/src/Statistic.Application/Statistic.Application.csproj
+++ b/src/Statistic.Application/Statistic.Application.csproj
@@ -6,4 +6,10 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="DTOs\" />
+      <Folder Include="Extensions\" />
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
