Refactor WPF application and update project structure
Renamed MainWindow to StatisticWindow and introduced changes to structure by removing ViewModel folder from Statistic.Wpf.csproj and creating a new StatisticViewModel class. Updated the App.xaml.cs to incorporate service registration and added new DependencyInjectionExtensions in each project for DI setup. Furthermore, added project references and Microsoft.Extensions.DependencyInjection package across projects.

--- a/src/Statistic.Wpf/Statistic.Wpf.csproj
+++ b/src/Statistic.Wpf/Statistic.Wpf.csproj
@@ -18,15 +18,19 @@
     <ItemGroup>
       <Folder Include="Converters\" />
       <Folder Include="Services\" />
-      <Folder Include="ViewModel\" />
     </ItemGroup>
 
     <ItemGroup>
-      <Page Update="View\MainWindow.xaml">
+      <Page Update="View\StatisticWindow.xaml">
         <Generator>MSBuild:Compile</Generator>
         <XamlRuntime>Wpf</XamlRuntime>
         <SubType>Designer</SubType>
       </Page>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Statistic.Application\Statistic.Application.csproj" />
+      <ProjectReference Include="..\Statistic.Infrastructure\Statistic.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
