--- a/src/Statistic.Application/Statistic.Application.csproj
+++ b/src/Statistic.Application/Statistic.Application.csproj
@@ -8,8 +8,11 @@
 
     <ItemGroup>
       <Folder Include="DTOs\" />
-      <Folder Include="Extensions\" />
       <Folder Include="Services\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
