--- a/src/Statistic.Infrastructure/Statistic.Infrastructure.csproj
+++ b/src/Statistic.Infrastructure/Statistic.Infrastructure.csproj
@@ -9,7 +9,10 @@
     <ItemGroup>
       <Folder Include="Data\Configurations\" />
       <Folder Include="Exceptions\" />
-      <Folder Include="Extensions\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
