Add DbContext and entity configurations
The changes include adding `StatisticDbContext` and entity configurations for `Visitor` and `VisitorInterests` to help manage how entities interact with the database. Additionally, the `DbContext` was configured to use MySQL and was added to the dependency injection container using the `AddInfrastructure` extension method.

--- a/src/Statistic.Infrastructure/Statistic.Infrastructure.csproj
+++ b/src/Statistic.Infrastructure/Statistic.Infrastructure.csproj
@@ -7,12 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Data\Configurations\" />
       <Folder Include="Exceptions\" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+      <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Statistic.Domain\Statistic.Domain.csproj" />
     </ItemGroup>
 
 </Project>
