Add AddressService and corresponding DTO
Three new files have been added: AddressDto.cs, IAddressService.cs, and AddressService.cs. The AddressService is responsible for managing data exchange between the domain and the application layer, specifically for the Address entity. Meanwhile, the AddressDto has been introduced to facilitate data transfer for the same. Additionally, the project has been updated to reference the Statistic.Domain project directly.

--- a/src/Statistic.Application/Statistic.Application.csproj
+++ b/src/Statistic.Application/Statistic.Application.csproj
@@ -7,12 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="DTOs\" />
-      <Folder Include="Services\" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+      <ProjectReference Include="..\Statistic.Domain\Statistic.Domain.csproj" />
     </ItemGroup>
 
 </Project>
