Update StatisticWindow.xaml design and functionality
Significant updates were made to the StatisticWindow.xaml design including font size and window size increases, addition of progress bar, and modification of button and checkBox selection. Additionally, a new converter, InverseBoolToVis, was added to convert boolean values to visibility properties inversely for certain View elements. The DataGrid was also updated for better user experience and interaction.

--- a/src/Statistic.Wpf/Statistic.Wpf.csproj
+++ b/src/Statistic.Wpf/Statistic.Wpf.csproj
@@ -16,12 +16,16 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Converters\" />
       <Folder Include="Services\" />
     </ItemGroup>
 
     <ItemGroup>
       <Page Update="View\StatisticWindow.xaml">
+        <Generator>MSBuild:Compile</Generator>
+        <XamlRuntime>Wpf</XamlRuntime>
+        <SubType>Designer</SubType>
+      </Page>
+      <Page Update="Styles\Style.xaml">
         <Generator>MSBuild:Compile</Generator>
         <XamlRuntime>Wpf</XamlRuntime>
         <SubType>Designer</SubType>
