--- a/src/Statistic.Application/Statistic.Application.csproj
+++ b/src/Statistic.Application/Statistic.Application.csproj
@@ -7,6 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="itext.bouncy-castle-adapter" Version="8.0.3" />
+      <PackageReference Include="itext7" Version="8.0.3" />
+      <PackageReference Include="itext7.pdfhtml" Version="5.0.3" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
