--- a/src/Statistic.Wpf/Statistic.Wpf.csproj
+++ b/src/Statistic.Wpf/Statistic.Wpf.csproj
@@ -7,12 +7,16 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <UseWPF>true</UseWPF>
         <UseWindowsForms>true</UseWindowsForms>
+        <Configurations>Debug;Release;Working</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="CommunityToolkit.Diagnostics" Version="8.2.2" />
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
       <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
     </ItemGroup>
 
@@ -49,6 +53,9 @@
       <Resource Include="Images\BSZWSchwarz.jpg" />
       <None Remove="Images\BSZLogoIconBlue.png" />
       <Resource Include="Images\BSZLogoIconBlue.png" />
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
