Add addresses.sql file and embed it into Statistic.Infrastructure project
A new file named addresses.sql was added to the Statistic.Infrastructure project. This file contains setup data for the `Address` table. It was also specified in the project file to remove any existing references to this file and then add it as an embedded resource.

--- a/src/Statistic.Infrastructure/Statistic.Infrastructure.csproj
+++ b/src/Statistic.Infrastructure/Statistic.Infrastructure.csproj
@@ -27,4 +27,9 @@
       <ProjectReference Include="..\Statistic.Domain\Statistic.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="addresses.sql" />
+      <EmbeddedResource Include="addresses.sql" />
+    </ItemGroup>
+
 </Project>
