Add addresses.json to Statistical.Infrastructure project
The addresses.json file has been added to the Statistical.Infrastructure project as an embedded resource. This new resource provides zip code data along with town and district information, which will enhance the statistical analysis methods used by the application.

--- a/src/Statistic.Infrastructure/Statistic.Infrastructure.csproj
+++ b/src/Statistic.Infrastructure/Statistic.Infrastructure.csproj
@@ -30,6 +30,8 @@
     <ItemGroup>
       <None Remove="addresses.sql" />
       <EmbeddedResource Include="addresses.sql" />
+      <None Remove="addresses.json" />
+      <EmbeddedResource Include="addresses.json" />
     </ItemGroup>
 
 </Project>
