Update school connection string in appsettings
The connection string for the school environment was empty. It has been updated with relevant information including server details, user ID, password, database name, and related configurations.

--- a/src/Statistic.Wpf/appsettings.json
+++ b/src/Statistic.Wpf/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "school" : "",
+        "school" : "server=localhost;Uid=bayerles;pwd=geheim;database=statistic;allowuservariables=True;SslMode=None",
         "home" : "server=localhost;Uid=bayerles;pwd=geheim;database=statistic;allowuservariables=True;SslMode=None" 
     }
 }
